TinyJulia/parser.output
Terminals unused in grammar

   TK_INC
   TK_DEC
   TK_BIT_AND_ASGN
   TK_BIT_XOR_ASGN
   TK_BIT_OR_ASGN
   TK_ERROR


Grammar

    0 $accept: start $end

    1 start: opEols statementList opEols

    2 new_line: new_line TK_EOL
    3         | TK_EOL
    4         | ';'

    5 opEols: new_line
    6       | %empty

    7 statementList: statementList new_line statement
    8              | statement

    9 function_statement_list: function_statement_list new_line fun_statement
   10                        | fun_statement

   11 statement: print_statement
   12          | declaration_statement
   13          | function_statement
   14          | expression_statement
   15          | while_statement
   16          | for_statement
   17          | if_statement
   18          | break_statement
   19          | continue_statement
   20          | return_statement

   21 fun_statement: print_statement
   22              | declaration_statement
   23              | expression_statement
   24              | while_statement
   25              | for_statement
   26              | if_statement
   27              | break_statement
   28              | continue_statement
   29              | return_statement

   30 return_statement: TK_RETURN expression

   31 break_statement: TK_BREAK

   32 continue_statement: TK_CONTINUE

   33 function_statement: TK_FUNCTION TK_ID '(' op_param_list ')' function_type block_statement TK_END

   34 function_type: type
   35              | %empty

   36 op_param_list: param_list
   37              | %empty

   38 param_list: param_list ',' param
   39           | param

   40 param: TK_ID type

   41 declaration_statement: TK_ID type op_decAsgn
   42                      | TK_ID arr_type '=' '[' argument_expression_list ']'

   43 op_decAsgn: '=' expression
   44           | %empty

   45 arr_type: TK_DOUBLE_COLON TK_ARRAY '{' TK_INT '}'
   46         | TK_DOUBLE_COLON TK_ARRAY '{' TK_BOOL '}'

   47 type: TK_DOUBLE_COLON TK_INT
   48     | TK_DOUBLE_COLON TK_BOOL

   49 if_statement: TK_IF expression block_statement elseif

   50 elseif: TK_ELSEIF expression block_statement elseif
   51       | TK_ELSE block_statement TK_END
   52       | TK_END

   53 for_statement: TK_FOR TK_ID for_tk expression ':' expression block_statement TK_END

   54 for_tk: '='
   55       | TK_IN

   56 while_statement: TK_WHILE expression block_statement TK_END

   57 block_statement: TK_EOL opEols function_statement_list opEols
   58                | TK_EOL opEols

   59 print_statement: TK_PRINT '(' print_arguments ')'
   60                | TK_PRINTLN '(' print_arguments ')'

   61 print_arguments: print_arguments ',' print_argument
   62                | print_argument

   63 print_argument: STRING_LITERAL
   64               | expression

   65 expression_statement: expression

   66 argument_expression_list: argument_expression_list ',' expression
   67                         | expression

   68 expression: assign_exp

   69 assign_exp: post_id '=' assign_exp
   70           | post_id TK_ADD_ASGN assign_exp
   71           | post_id TK_SUB_ASGN assign_exp
   72           | post_id TK_MULT_ASGN assign_exp
   73           | post_id TK_DIV_ASGN assign_exp
   74           | post_id TK_MOD_ASGN assign_exp
   75           | post_id TK_POW_ASGN assign_exp
   76           | conditional_or_exp

   77 conditional_or_exp: conditional_or_exp TL_LOGICAL_OR conditional_and_exp
   78                   | conditional_and_exp

   79 conditional_and_exp: conditional_and_exp TK_LOGICAL_AND bit_or_exp
   80                    | bit_or_exp

   81 bit_or_exp: bit_or_exp '|' bit_xor_exp
   82           | bit_xor_exp

   83 bit_xor_exp: bit_xor_exp '$' bit_and_exp
   84            | bit_and_exp

   85 bit_and_exp: bit_and_exp '&' relational_expr
   86            | relational_expr

   87 relational_expr: relational_expr TK_EQUALS aritmethic
   88                | relational_expr TK_NOT_EQUALS aritmethic
   89                | relational_expr '>' aritmethic
   90                | relational_expr '<' aritmethic
   91                | relational_expr TK_GREATER_THAN_EQUALS aritmethic
   92                | relational_expr TK_LESS_THAN_EQUALS aritmethic
   93                | aritmethic

   94 aritmethic: aritmethic '-' shift_exp
   95           | aritmethic '+' shift_exp
   96           | shift_exp

   97 shift_exp: shift_exp TK_SHIFT_LEFT term
   98          | shift_exp TK_SHIFT_RIGHT term
   99          | term

  100 term: term '*' exponent
  101     | term '/' exponent
  102     | term '%' exponent
  103     | exponent

  104 exponent: exponent '^' unary_exp
  105         | unary_exp

  106 unary_exp: '-' unary_exp
  107          | '~' unary_exp
  108          | '+' unary_exp
  109          | '!' unary_exp
  110          | post_id

  111 post_id: factor
  112        | TK_ID '(' argument_expression_list ')'
  113        | TK_ID '(' ')'
  114        | TK_ID '[' expression ']'

  115 factor: TK_NUM
  116       | TK_TRUE
  117       | TK_FALSE
  118       | TK_ID
  119       | '(' expression ')'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 109
'$' (36) 83
'%' (37) 102
'&' (38) 85
'(' (40) 33 59 60 112 113 119
')' (41) 33 59 60 112 113 119
'*' (42) 100
'+' (43) 95 108
',' (44) 38 61 66
'-' (45) 94 106
'/' (47) 101
':' (58) 53
';' (59) 4
'<' (60) 90
'=' (61) 42 43 54 69
'>' (62) 89
'[' (91) 42 114
']' (93) 42 114
'^' (94) 104
'{' (123) 45 46
'|' (124) 81
'}' (125) 45 46
'~' (126) 107
error (256)
TK_NUM (258) 115
TK_TRUE (259) 116
TK_FALSE (260) 117
TK_ID (261) 33 40 41 42 53 112 113 114 118
STRING_LITERAL (262) 63
TK_EOL (263) 2 3 57 58
TK_INC (264)
TK_DEC (265)
TK_SHIFT_RIGHT (266) 98
TK_SHIFT_LEFT (267) 97
TK_EQUALS (268) 87
TK_NOT_EQUALS (269) 88
TK_LESS_THAN_EQUALS (270) 92
TK_GREATER_THAN_EQUALS (271) 91
TK_IN (272) 55
TK_LOGICAL_AND (273) 79
TL_LOGICAL_OR (274) 77
TK_DOUBLE_COLON (275) 45 46 47 48
TK_ADD_ASGN (276) 70
TK_SUB_ASGN (277) 71
TK_MULT_ASGN (278) 72
TK_DIV_ASGN (279) 73
TK_MOD_ASGN (280) 74
TK_POW_ASGN (281) 75
TK_BIT_AND_ASGN (282)
TK_PRINT (283) 59
TK_PRINTLN (284) 60
TK_BOOL (285) 46 48
TK_INT (286) 45 47
TK_IF (287) 49
TK_ELSE (288) 51
TK_ELSEIF (289) 50
TK_WHILE (290) 56
TK_FOR (291) 53
TK_FUNCTION (292) 33
TK_RETURN (293) 30
TK_BIT_XOR_ASGN (294)
TK_BIT_OR_ASGN (295)
TK_ARRAY (296) 45 46
TK_END (297) 33 51 52 53 56
TK_ERROR (298)
TK_BREAK (299) 31
TK_CONTINUE (300) 32


Nonterminals, with rules where they appear

$accept (69)
    on left: 0
start (70)
    on left: 1, on right: 0
new_line (71)
    on left: 2 3 4, on right: 2 5 7 9
opEols (72)
    on left: 5 6, on right: 1 57 58
statementList (73)
    on left: 7 8, on right: 1 7
function_statement_list (74)
    on left: 9 10, on right: 9 57
statement (75)
    on left: 11 12 13 14 15 16 17 18 19 20, on right: 7 8
fun_statement (76)
    on left: 21 22 23 24 25 26 27 28 29, on right: 9 10
return_statement (77)
    on left: 30, on right: 20 29
break_statement (78)
    on left: 31, on right: 18 27
continue_statement (79)
    on left: 32, on right: 19 28
function_statement (80)
    on left: 33, on right: 13
function_type (81)
    on left: 34 35, on right: 33
op_param_list (82)
    on left: 36 37, on right: 33
param_list (83)
    on left: 38 39, on right: 36 38
param (84)
    on left: 40, on right: 38 39
declaration_statement (85)
    on left: 41 42, on right: 12 22
op_decAsgn (86)
    on left: 43 44, on right: 41
arr_type (87)
    on left: 45 46, on right: 42
type (88)
    on left: 47 48, on right: 34 40 41
if_statement (89)
    on left: 49, on right: 17 26
elseif (90)
    on left: 50 51 52, on right: 49 50
for_statement (91)
    on left: 53, on right: 16 25
for_tk (92)
    on left: 54 55, on right: 53
while_statement (93)
    on left: 56, on right: 15 24
block_statement (94)
    on left: 57 58, on right: 33 49 50 51 53 56
print_statement (95)
    on left: 59 60, on right: 11 21
print_arguments (96)
    on left: 61 62, on right: 59 60 61
print_argument (97)
    on left: 63 64, on right: 61 62
expression_statement (98)
    on left: 65, on right: 14 23
argument_expression_list (99)
    on left: 66 67, on right: 42 66 112
expression (100)
    on left: 68, on right: 30 43 49 50 53 56 64 65 66 67 114 119
assign_exp (101)
    on left: 69 70 71 72 73 74 75 76, on right: 68 69 70 71 72 73 74
    75
conditional_or_exp (102)
    on left: 77 78, on right: 76 77
conditional_and_exp (103)
    on left: 79 80, on right: 77 78 79
bit_or_exp (104)
    on left: 81 82, on right: 79 80 81
bit_xor_exp (105)
    on left: 83 84, on right: 81 82 83
bit_and_exp (106)
    on left: 85 86, on right: 83 84 85
relational_expr (107)
    on left: 87 88 89 90 91 92 93, on right: 85 86 87 88 89 90 91 92
aritmethic (108)
    on left: 94 95 96, on right: 87 88 89 90 91 92 93 94 95
shift_exp (109)
    on left: 97 98 99, on right: 94 95 96 97 98
term (110)
    on left: 100 101 102 103, on right: 97 98 99 100 101 102
exponent (111)
    on left: 104 105, on right: 100 101 102 103 104
unary_exp (112)
    on left: 106 107 108 109 110, on right: 104 105 106 107 108 109
post_id (113)
    on left: 111 112 113 114, on right: 69 70 71 72 73 74 75 110
factor (114)
    on left: 115 116 117 118 119, on right: 111


State 0

    0 $accept: . start $end
    1 start: . opEols statementList opEols
    2 new_line: . new_line TK_EOL
    3         | . TK_EOL
    4         | . ';'
    5 opEols: . new_line
    6       | . %empty  [TK_NUM, TK_TRUE, TK_FALSE, TK_ID, TK_PRINT, TK_PRINTLN, TK_IF, TK_WHILE, TK_FOR, TK_FUNCTION, TK_RETURN, TK_BREAK, TK_CONTINUE, '(', '-', '+', '~', '!']

    TK_EOL  shift, and go to state 1
    ';'     shift, and go to state 2

    $default  reduce using rule 6 (opEols)

    start     go to state 3
    new_line  go to state 4
    opEols    go to state 5


State 1

    3 new_line: TK_EOL .

    $default  reduce using rule 3 (new_line)


State 2

    4 new_line: ';' .

    $default  reduce using rule 4 (new_line)


State 3

    0 $accept: start . $end

    $end  shift, and go to state 6


State 4

    2 new_line: new_line . TK_EOL
    5 opEols: new_line .  [TK_NUM, TK_TRUE, TK_FALSE, TK_ID, TK_PRINT, TK_PRINTLN, TK_IF, TK_ELSE, TK_ELSEIF, TK_WHILE, TK_FOR, TK_FUNCTION, TK_RETURN, TK_END, TK_BREAK, TK_CONTINUE, '(', '-', '+', '~', '!']

    TK_EOL  shift, and go to state 7

    $default  reduce using rule 5 (opEols)


State 5

    1 start: opEols . statementList opEols
    7 statementList: . statementList new_line statement
    8              | . statement
   11 statement: . print_statement
   12          | . declaration_statement
   13          | . function_statement
   14          | . expression_statement
   15          | . while_statement
   16          | . for_statement
   17          | . if_statement
   18          | . break_statement
   19          | . continue_statement
   20          | . return_statement
   30 return_statement: . TK_RETURN expression
   31 break_statement: . TK_BREAK
   32 continue_statement: . TK_CONTINUE
   33 function_statement: . TK_FUNCTION TK_ID '(' op_param_list ')' function_type block_statement TK_END
   41 declaration_statement: . TK_ID type op_decAsgn
   42                      | . TK_ID arr_type '=' '[' argument_expression_list ']'
   49 if_statement: . TK_IF expression block_statement elseif
   53 for_statement: . TK_FOR TK_ID for_tk expression ':' expression block_statement TK_END
   56 while_statement: . TK_WHILE expression block_statement TK_END
   59 print_statement: . TK_PRINT '(' print_arguments ')'
   60                | . TK_PRINTLN '(' print_arguments ')'
   65 expression_statement: . expression
   68 expression: . assign_exp
   69 assign_exp: . post_id '=' assign_exp
   70           | . post_id TK_ADD_ASGN assign_exp
   71           | . post_id TK_SUB_ASGN assign_exp
   72           | . post_id TK_MULT_ASGN assign_exp
   73           | . post_id TK_DIV_ASGN assign_exp
   74           | . post_id TK_MOD_ASGN assign_exp
   75           | . post_id TK_POW_ASGN assign_exp
   76           | . conditional_or_exp
   77 conditional_or_exp: . conditional_or_exp TL_LOGICAL_OR conditional_and_exp
   78                   | . conditional_and_exp
   79 conditional_and_exp: . conditional_and_exp TK_LOGICAL_AND bit_or_exp
   80                    | . bit_or_exp
   81 bit_or_exp: . bit_or_exp '|' bit_xor_exp
   82           | . bit_xor_exp
   83 bit_xor_exp: . bit_xor_exp '$' bit_and_exp
   84            | . bit_and_exp
   85 bit_and_exp: . bit_and_exp '&' relational_expr
   86            | . relational_expr
   87 relational_expr: . relational_expr TK_EQUALS aritmethic
   88                | . relational_expr TK_NOT_EQUALS aritmethic
   89                | . relational_expr '>' aritmethic
   90                | . relational_expr '<' aritmethic
   91                | . relational_expr TK_GREATER_THAN_EQUALS aritmethic
   92                | . relational_expr TK_LESS_THAN_EQUALS aritmethic
   93                | . aritmethic
   94 aritmethic: . aritmethic '-' shift_exp
   95           | . aritmethic '+' shift_exp
   96           | . shift_exp
   97 shift_exp: . shift_exp TK_SHIFT_LEFT term
   98          | . shift_exp TK_SHIFT_RIGHT term
   99          | . term
  100 term: . term '*' exponent
  101     | . term '/' exponent
  102     | . term '%' exponent
  103     | . exponent
  104 exponent: . exponent '^' unary_exp
  105         | . unary_exp
  106 unary_exp: . '-' unary_exp
  107          | . '~' unary_exp
  108          | . '+' unary_exp
  109          | . '!' unary_exp
  110          | . post_id
  111 post_id: . factor
  112        | . TK_ID '(' argument_expression_list ')'
  113        | . TK_ID '(' ')'
  114        | . TK_ID '[' expression ']'
  115 factor: . TK_NUM
  116       | . TK_TRUE
  117       | . TK_FALSE
  118       | . TK_ID
  119       | . '(' expression ')'

    TK_NUM       shift, and go to state 8
    TK_TRUE      shift, and go to state 9
    TK_FALSE     shift, and go to state 10
    TK_ID        shift, and go to state 11
    TK_PRINT     shift, and go to state 12
    TK_PRINTLN   shift, and go to state 13
    TK_IF        shift, and go to state 14
    TK_WHILE     shift, and go to state 15
    TK_FOR       shift, and go to state 16
    TK_FUNCTION  shift, and go to state 17
    TK_RETURN    shift, and go to state 18
    TK_BREAK     shift, and go to state 19
    TK_CONTINUE  shift, and go to state 20
    '('          shift, and go to state 21
    '-'          shift, and go to state 22
    '+'          shift, and go to state 23
    '~'          shift, and go to state 24
    '!'          shift, and go to state 25

    statementList          go to state 26
    statement              go to state 27
    return_statement       go to state 28
    break_statement        go to state 29
    continue_statement     go to state 30
    function_statement     go to state 31
    declaration_statement  go to state 32
    if_statement           go to state 33
    for_statement          go to state 34
    while_statement        go to state 35
    print_statement        go to state 36
    expression_statement   go to state 37
    expression             go to state 38
    assign_exp             go to state 39
    conditional_or_exp     go to state 40
    conditional_and_exp    go to state 41
    bit_or_exp             go to state 42
    bit_xor_exp            go to state 43
    bit_and_exp            go to state 44
    relational_expr        go to state 45
    aritmethic             go to state 46
    shift_exp              go to state 47
    term                   go to state 48
    exponent               go to state 49
    unary_exp              go to state 50
    post_id                go to state 51
    factor                 go to state 52


State 6

    0 $accept: start $end .

    $default  accept


State 7

    2 new_line: new_line TK_EOL .

    $default  reduce using rule 2 (new_line)


State 8

  115 factor: TK_NUM .

    $default  reduce using rule 115 (factor)


State 9

  116 factor: TK_TRUE .

    $default  reduce using rule 116 (factor)


State 10

  117 factor: TK_FALSE .

    $default  reduce using rule 117 (factor)


State 11

   41 declaration_statement: TK_ID . type op_decAsgn
   42                      | TK_ID . arr_type '=' '[' argument_expression_list ']'
   45 arr_type: . TK_DOUBLE_COLON TK_ARRAY '{' TK_INT '}'
   46         | . TK_DOUBLE_COLON TK_ARRAY '{' TK_BOOL '}'
   47 type: . TK_DOUBLE_COLON TK_INT
   48     | . TK_DOUBLE_COLON TK_BOOL
  112 post_id: TK_ID . '(' argument_expression_list ')'
  113        | TK_ID . '(' ')'
  114        | TK_ID . '[' expression ']'
  118 factor: TK_ID .  [$end, TK_EOL, TK_SHIFT_RIGHT, TK_SHIFT_LEFT, TK_EQUALS, TK_NOT_EQUALS, TK_LESS_THAN_EQUALS, TK_GREATER_THAN_EQUALS, TK_LOGICAL_AND, TL_LOGICAL_OR, TK_ADD_ASGN, TK_SUB_ASGN, TK_MULT_ASGN, TK_DIV_ASGN, TK_MOD_ASGN, TK_POW_ASGN, TK_ELSE, TK_ELSEIF, TK_END, ';', '=', '|', '$', '&', '>', '<', '-', '+', '*', '/', '%', '^']

    TK_DOUBLE_COLON  shift, and go to state 53
    '('              shift, and go to state 54
    '['              shift, and go to state 55

    $default  reduce using rule 118 (factor)

    arr_type  go to state 56
    type      go to state 57


State 12

   59 print_statement: TK_PRINT . '(' print_arguments ')'

    '('  shift, and go to state 58


State 13

   60 print_statement: TK_PRINTLN . '(' print_arguments ')'

    '('  shift, and go to state 59


State 14

   49 if_statement: TK_IF . expression block_statement elseif
   68 expression: . assign_exp
   69 assign_exp: . post_id '=' assign_exp
   70           | . post_id TK_ADD_ASGN assign_exp
   71           | . post_id TK_SUB_ASGN assign_exp
   72           | . post_id TK_MULT_ASGN assign_exp
   73           | . post_id TK_DIV_ASGN assign_exp
   74           | . post_id TK_MOD_ASGN assign_exp
   75           | . post_id TK_POW_ASGN assign_exp
   76           | . conditional_or_exp
   77 conditional_or_exp: . conditional_or_exp TL_LOGICAL_OR conditional_and_exp
   78                   | . conditional_and_exp
   79 conditional_and_exp: . conditional_and_exp TK_LOGICAL_AND bit_or_exp
   80                    | . bit_or_exp
   81 bit_or_exp: . bit_or_exp '|' bit_xor_exp
   82           | . bit_xor_exp
   83 bit_xor_exp: . bit_xor_exp '$' bit_and_exp
   84            | . bit_and_exp
   85 bit_and_exp: . bit_and_exp '&' relational_expr
   86            | . relational_expr
   87 relational_expr: . relational_expr TK_EQUALS aritmethic
   88                | . relational_expr TK_NOT_EQUALS aritmethic
   89                | . relational_expr '>' aritmethic
   90                | . relational_expr '<' aritmethic
   91                | . relational_expr TK_GREATER_THAN_EQUALS aritmethic
   92                | . relational_expr TK_LESS_THAN_EQUALS aritmethic
   93                | . aritmethic
   94 aritmethic: . aritmethic '-' shift_exp
   95           | . aritmethic '+' shift_exp
   96           | . shift_exp
   97 shift_exp: . shift_exp TK_SHIFT_LEFT term
   98          | . shift_exp TK_SHIFT_RIGHT term
   99          | . term
  100 term: . term '*' exponent
  101     | . term '/' exponent
  102     | . term '%' exponent
  103     | . exponent
  104 exponent: . exponent '^' unary_exp
  105         | . unary_exp
  106 unary_exp: . '-' unary_exp
  107          | . '~' unary_exp
  108          | . '+' unary_exp
  109          | . '!' unary_exp
  110          | . post_id
  111 post_id: . factor
  112        | . TK_ID '(' argument_expression_list ')'
  113        | . TK_ID '(' ')'
  114        | . TK_ID '[' expression ']'
  115 factor: . TK_NUM
  116       | . TK_TRUE
  117       | . TK_FALSE
  118       | . TK_ID
  119       | . '(' expression ')'

    TK_NUM    shift, and go to state 8
    TK_TRUE   shift, and go to state 9
    TK_FALSE  shift, and go to state 10
    TK_ID     shift, and go to state 60
    '('       shift, and go to state 21
    '-'       shift, and go to state 22
    '+'       shift, and go to state 23
    '~'       shift, and go to state 24
    '!'       shift, and go to state 25

    expression           go to state 61
    assign_exp           go to state 39
    conditional_or_exp   go to state 40
    conditional_and_exp  go to state 41
    bit_or_exp           go to state 42
    bit_xor_exp          go to state 43
    bit_and_exp          go to state 44
    relational_expr      go to state 45
    aritmethic           go to state 46
    shift_exp            go to state 47
    term                 go to state 48
    exponent             go to state 49
    unary_exp            go to state 50
    post_id              go to state 51
    factor               go to state 52


State 15

   56 while_statement: TK_WHILE . expression block_statement TK_END
   68 expression: . assign_exp
   69 assign_exp: . post_id '=' assign_exp
   70           | . post_id TK_ADD_ASGN assign_exp
   71           | . post_id TK_SUB_ASGN assign_exp
   72           | . post_id TK_MULT_ASGN assign_exp
   73           | . post_id TK_DIV_ASGN assign_exp
   74           | . post_id TK_MOD_ASGN assign_exp
   75           | . post_id TK_POW_ASGN assign_exp
   76           | . conditional_or_exp
   77 conditional_or_exp: . conditional_or_exp TL_LOGICAL_OR conditional_and_exp
   78                   | . conditional_and_exp
   79 conditional_and_exp: . conditional_and_exp TK_LOGICAL_AND bit_or_exp
   80                    | . bit_or_exp
   81 bit_or_exp: . bit_or_exp '|' bit_xor_exp
   82           | . bit_xor_exp
   83 bit_xor_exp: . bit_xor_exp '$' bit_and_exp
   84            | . bit_and_exp
   85 bit_and_exp: . bit_and_exp '&' relational_expr
   86            | . relational_expr
   87 relational_expr: . relational_expr TK_EQUALS aritmethic
   88                | . relational_expr TK_NOT_EQUALS aritmethic
   89                | . relational_expr '>' aritmethic
   90                | . relational_expr '<' aritmethic
   91                | . relational_expr TK_GREATER_THAN_EQUALS aritmethic
   92                | . relational_expr TK_LESS_THAN_EQUALS aritmethic
   93                | . aritmethic
   94 aritmethic: . aritmethic '-' shift_exp
   95           | . aritmethic '+' shift_exp
   96           | . shift_exp
   97 shift_exp: . shift_exp TK_SHIFT_LEFT term
   98          | . shift_exp TK_SHIFT_RIGHT term
   99          | . term
  100 term: . term '*' exponent
  101     | . term '/' exponent
  102     | . term '%' exponent
  103     | . exponent
  104 exponent: . exponent '^' unary_exp
  105         | . unary_exp
  106 unary_exp: . '-' unary_exp
  107          | . '~' unary_exp
  108          | . '+' unary_exp
  109          | . '!' unary_exp
  110          | . post_id
  111 post_id: . factor
  112        | . TK_ID '(' argument_expression_list ')'
  113        | . TK_ID '(' ')'
  114        | . TK_ID '[' expression ']'
  115 factor: . TK_NUM
  116       | . TK_TRUE
  117       | . TK_FALSE
  118       | . TK_ID
  119       | . '(' expression ')'

    TK_NUM    shift, and go to state 8
    TK_TRUE   shift, and go to state 9
    TK_FALSE  shift, and go to state 10
    TK_ID     shift, and go to state 60
    '('       shift, and go to state 21
    '-'       shift, and go to state 22
    '+'       shift, and go to state 23
    '~'       shift, and go to state 24
    '!'       shift, and go to state 25

    expression           go to state 62
    assign_exp           go to state 39
    conditional_or_exp   go to state 40
    conditional_and_exp  go to state 41
    bit_or_exp           go to state 42
    bit_xor_exp          go to state 43
    bit_and_exp          go to state 44
    relational_expr      go to state 45
    aritmethic           go to state 46
    shift_exp            go to state 47
    term                 go to state 48
    exponent             go to state 49
    unary_exp            go to state 50
    post_id              go to state 51
    factor               go to state 52


State 16

   53 for_statement: TK_FOR . TK_ID for_tk expression ':' expression block_statement TK_END

    TK_ID  shift, and go to state 63


State 17

   33 function_statement: TK_FUNCTION . TK_ID '(' op_param_list ')' function_type block_statement TK_END

    TK_ID  shift, and go to state 64


State 18

   30 return_statement: TK_RETURN . expression
   68 expression: . assign_exp
   69 assign_exp: . post_id '=' assign_exp
   70           | . post_id TK_ADD_ASGN assign_exp
   71           | . post_id TK_SUB_ASGN assign_exp
   72           | . post_id TK_MULT_ASGN assign_exp
   73           | . post_id TK_DIV_ASGN assign_exp
   74           | . post_id TK_MOD_ASGN assign_exp
   75           | . post_id TK_POW_ASGN assign_exp
   76           | . conditional_or_exp
   77 conditional_or_exp: . conditional_or_exp TL_LOGICAL_OR conditional_and_exp
   78                   | . conditional_and_exp
   79 conditional_and_exp: . conditional_and_exp TK_LOGICAL_AND bit_or_exp
   80                    | . bit_or_exp
   81 bit_or_exp: . bit_or_exp '|' bit_xor_exp
   82           | . bit_xor_exp
   83 bit_xor_exp: . bit_xor_exp '$' bit_and_exp
   84            | . bit_and_exp
   85 bit_and_exp: . bit_and_exp '&' relational_expr
   86            | . relational_expr
   87 relational_expr: . relational_expr TK_EQUALS aritmethic
   88                | . relational_expr TK_NOT_EQUALS aritmethic
   89                | . relational_expr '>' aritmethic
   90                | . relational_expr '<' aritmethic
   91                | . relational_expr TK_GREATER_THAN_EQUALS aritmethic
   92                | . relational_expr TK_LESS_THAN_EQUALS aritmethic
   93                | . aritmethic
   94 aritmethic: . aritmethic '-' shift_exp
   95           | . aritmethic '+' shift_exp
   96           | . shift_exp
   97 shift_exp: . shift_exp TK_SHIFT_LEFT term
   98          | . shift_exp TK_SHIFT_RIGHT term
   99          | . term
  100 term: . term '*' exponent
  101     | . term '/' exponent
  102     | . term '%' exponent
  103     | . exponent
  104 exponent: . exponent '^' unary_exp
  105         | . unary_exp
  106 unary_exp: . '-' unary_exp
  107          | . '~' unary_exp
  108          | . '+' unary_exp
  109          | . '!' unary_exp
  110          | . post_id
  111 post_id: . factor
  112        | . TK_ID '(' argument_expression_list ')'
  113        | . TK_ID '(' ')'
  114        | . TK_ID '[' expression ']'
  115 factor: . TK_NUM
  116       | . TK_TRUE
  117       | . TK_FALSE
  118       | . TK_ID
  119       | . '(' expression ')'

    TK_NUM    shift, and go to state 8
    TK_TRUE   shift, and go to state 9
    TK_FALSE  shift, and go to state 10
    TK_ID     shift, and go to state 60
    '('       shift, and go to state 21
    '-'       shift, and go to state 22
    '+'       shift, and go to state 23
    '~'       shift, and go to state 24
    '!'       shift, and go to state 25

    expression           go to state 65
    assign_exp           go to state 39
    conditional_or_exp   go to state 40
    conditional_and_exp  go to state 41
    bit_or_exp           go to state 42
    bit_xor_exp          go to state 43
    bit_and_exp          go to state 44
    relational_expr      go to state 45
    aritmethic           go to state 46
    shift_exp            go to state 47
    term                 go to state 48
    exponent             go to state 49
    unary_exp            go to state 50
    post_id              go to state 51
    factor               go to state 52


State 19

   31 break_statement: TK_BREAK .

    $default  reduce using rule 31 (break_statement)


State 20

   32 continue_statement: TK_CONTINUE .

    $default  reduce using rule 32 (continue_statement)


State 21

   68 expression: . assign_exp
   69 assign_exp: . post_id '=' assign_exp
   70           | . post_id TK_ADD_ASGN assign_exp
   71           | . post_id TK_SUB_ASGN assign_exp
   72           | . post_id TK_MULT_ASGN assign_exp
   73           | . post_id TK_DIV_ASGN assign_exp
   74           | . post_id TK_MOD_ASGN assign_exp
   75           | . post_id TK_POW_ASGN assign_exp
   76           | . conditional_or_exp
   77 conditional_or_exp: . conditional_or_exp TL_LOGICAL_OR conditional_and_exp
   78                   | . conditional_and_exp
   79 conditional_and_exp: . conditional_and_exp TK_LOGICAL_AND bit_or_exp
   80                    | . bit_or_exp
   81 bit_or_exp: . bit_or_exp '|' bit_xor_exp
   82           | . bit_xor_exp
   83 bit_xor_exp: . bit_xor_exp '$' bit_and_exp
   84            | . bit_and_exp
   85 bit_and_exp: . bit_and_exp '&' relational_expr
   86            | . relational_expr
   87 relational_expr: . relational_expr TK_EQUALS aritmethic
   88                | . relational_expr TK_NOT_EQUALS aritmethic
   89                | . relational_expr '>' aritmethic
   90                | . relational_expr '<' aritmethic
   91                | . relational_expr TK_GREATER_THAN_EQUALS aritmethic
   92                | . relational_expr TK_LESS_THAN_EQUALS aritmethic
   93                | . aritmethic
   94 aritmethic: . aritmethic '-' shift_exp
   95           | . aritmethic '+' shift_exp
   96           | . shift_exp
   97 shift_exp: . shift_exp TK_SHIFT_LEFT term
   98          | . shift_exp TK_SHIFT_RIGHT term
   99          | . term
  100 term: . term '*' exponent
  101     | . term '/' exponent
  102     | . term '%' exponent
  103     | . exponent
  104 exponent: . exponent '^' unary_exp
  105         | . unary_exp
  106 unary_exp: . '-' unary_exp
  107          | . '~' unary_exp
  108          | . '+' unary_exp
  109          | . '!' unary_exp
  110          | . post_id
  111 post_id: . factor
  112        | . TK_ID '(' argument_expression_list ')'
  113        | . TK_ID '(' ')'
  114        | . TK_ID '[' expression ']'
  115 factor: . TK_NUM
  116       | . TK_TRUE
  117       | . TK_FALSE
  118       | . TK_ID
  119       | . '(' expression ')'
  119       | '(' . expression ')'

    TK_NUM    shift, and go to state 8
    TK_TRUE   shift, and go to state 9
    TK_FALSE  shift, and go to state 10
    TK_ID     shift, and go to state 60
    '('       shift, and go to state 21
    '-'       shift, and go to state 22
    '+'       shift, and go to state 23
    '~'       shift, and go to state 24
    '!'       shift, and go to state 25

    expression           go to state 66
    assign_exp           go to state 39
    conditional_or_exp   go to state 40
    conditional_and_exp  go to state 41
    bit_or_exp           go to state 42
    bit_xor_exp          go to state 43
    bit_and_exp          go to state 44
    relational_expr      go to state 45
    aritmethic           go to state 46
    shift_exp            go to state 47
    term                 go to state 48
    exponent             go to state 49
    unary_exp            go to state 50
    post_id              go to state 51
    factor               go to state 52


State 22

  106 unary_exp: . '-' unary_exp
  106          | '-' . unary_exp
  107          | . '~' unary_exp
  108          | . '+' unary_exp
  109          | . '!' unary_exp
  110          | . post_id
  111 post_id: . factor
  112        | . TK_ID '(' argument_expression_list ')'
  113        | . TK_ID '(' ')'
  114        | . TK_ID '[' expression ']'
  115 factor: . TK_NUM
  116       | . TK_TRUE
  117       | . TK_FALSE
  118       | . TK_ID
  119       | . '(' expression ')'

    TK_NUM    shift, and go to state 8
    TK_TRUE   shift, and go to state 9
    TK_FALSE  shift, and go to state 10
    TK_ID     shift, and go to state 60
    '('       shift, and go to state 21
    '-'       shift, and go to state 22
    '+'       shift, and go to state 23
    '~'       shift, and go to state 24
    '!'       shift, and go to state 25

    unary_exp  go to state 67
    post_id    go to state 68
    factor     go to state 52


State 23

  106 unary_exp: . '-' unary_exp
  107          | . '~' unary_exp
  108          | . '+' unary_exp
  108          | '+' . unary_exp
  109          | . '!' unary_exp
  110          | . post_id
  111 post_id: . factor
  112        | . TK_ID '(' argument_expression_list ')'
  113        | . TK_ID '(' ')'
  114        | . TK_ID '[' expression ']'
  115 factor: . TK_NUM
  116       | . TK_TRUE
  117       | . TK_FALSE
  118       | . TK_ID
  119       | . '(' expression ')'
